<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:keepScreenOn="true"
    android:fitsSystemWindows="true"
    tools:context="com.kolowaphealth.fitnesshealth.Main6Activity">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:orientation="vertical">


    <ImageView
        android:paddingBottom="7dp"
        android:fitsSystemWindows="true"
        android:id="@+id/image"
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/zave"
        />
    <TextView
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title1"
        android:gravity="center_horizontal"
        android:textColor="@color/colorPrimary"
        android:textSize="25dp"
        android:textStyle="normal"
        android:layout_marginTop="1dp"
        />
    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:gravity="center_horizontal"
        android:textStyle="normal"
        android:textSize="15dp"
        android:textColor="#000000"
        android:layout_marginTop="15dp"/>
    <TextView
        android:id="@+id/text3"
        android:gravity="center_horizontal"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/data"/>
    <Button

        android:layout_marginRight="15dp"
        android:layout_marginLeft="15dp"
        android:clickable="true"
        android:onClick="start"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my"
        android:textColor="#FFFFFF"
        android:background="@color/colorPrimaryDark"/>
</LinearLayout>
</LinearLayout>
